Display ongoing game logs
